BUGFIX Fixed toolbar.css button alignment in FF3.6

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -69,6 +69,7 @@
 		}
 			
 		.ss-globaltoolbar button.submit {
+			float: left;
 			width: 22px;
 			height: 22px;
 			background: url(../images/search-rht.gif) top right no-repeat;
